Add headless/testable APIs and unit tests for core logic
Refactored core game logic to support headless unit testing by introducing test-friendly constructors, abstracting HP/MP view updates, and allowing deterministic RNG injection. Added comprehensive JUnit tests for player stats, damage, leveling, area logic, and props. Updated dependencies and imports for test support and improved modularity.

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <name>RPGgame</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://github.com/Cyuxee/RPGgame</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -44,6 +44,12 @@
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-fxml</artifactId>
         <version>${javafx.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-swing</artifactId>
+      <version>${javafx.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
